k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apartment-price-backend
  namespace: mlops
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: apartment-price-backend
  template:
    metadata:
      labels:
        app: apartment-price-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3d-argodemo-server-0
      containers:
        - name: backend
          image: apartment-price-backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 10
