k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apartment-price-backend
  namespace: mlops
spec:
  selector:
    app: apartment-price-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
